新增原生广告灯

--- a/.gitignore
+++ b/.gitignore
@@ -1,110 +1,2 @@
 
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/af.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/af.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-AE.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-AE.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-AE.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-EG.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-EG.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-EG.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-SA.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-SA.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar-SA.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ar.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/bn.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/bn.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/cs.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/cs.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/da.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/da.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/de-AT.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/de-AT.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/de-CH.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/de-CH.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/de.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/de.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/el.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/el.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/en-PH.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/en-PH.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/en.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/en.lproj/._Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/en.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/en.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-AR.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-AR.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-CL.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-CL.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-CO.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-CO.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-EC.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-EC.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-MX.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-MX.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-PE.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es-PE.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/es.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/fi.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/fi.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/fr.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/fr.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ga.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ga.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/hi.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/hi.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/hu.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/hu.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/id.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/id.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/it.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/it.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ja.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ja.lproj/._Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ja.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ja.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ko.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ko.lproj/._Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ko.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ko.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ms-MY.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ms-MY.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ms.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ms.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/nb.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/nb.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ng.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ng.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/nl-BE.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/nl-BE.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/nl.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/nl.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pl.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pl.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt-BR.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt-BR.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt-PT.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt-PT.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt.lproj/._Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/pt.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ro.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ro.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ru.lproj/._InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ru.lproj/._Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ru.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ru.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/sv-SE.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/sv-SE.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/sv.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/sv.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/th.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/th.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/tr.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/tr.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ur.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/ur.lproj/Localizable.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/vi.lproj/InfoPlist.strings
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization/vi.lproj/Localizable.strings
+AndroidAndIOSSystem/IOS部分交互/New/I2Localization
