--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 AndroidAndIOSSystem/IOS部分交互/New/I2Localization
 AndroidAndIOSSystem/IOS部分交互/Limit
 AndroidAndIOSSystem/IOS部分交互/IOS.txt
+AndroidAndIOSSystem/IOS部分交互/design_unity/GoogleMobileAdsSdkiOS-11.3.0
