--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 
-AndroidAndIOSSystem/IOS部分交互/New/I2Localization
-AndroidAndIOSSystem/IOS部分交互/Limit
-AndroidAndIOSSystem/IOS部分交互/IOS.txt
-AndroidAndIOSSystem/IOS部分交互/design_unity/GoogleMobileAdsSdkiOS-11.3.0
+AndroidAndIOSSystem/IOS部分交互
+AndroidAndIOSSystem/WpSdk
